# cyber

./: Dockerfile  Makefile  README.md  celery_app.py  docker-compose.yml  env.env-exemple  main.py  pyproject.toml  requirements.txt  send_task.py  settings.py
api/: main.py
task_app/: celery_app.py  celeryconfig.py  main.py  send_task.py
task_app/tasks/: send_form.py
task_app/utils/: captcha.py  selenium.py
tasks/: __init__.py  send_form.py
