[tool.poetry]
name = "cyber"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.0"
selenium-toolkit = "^0.0.6"
2captcha-python = "^1.2.0"
celery = "^5.2.7"
redis = "^4.5.4"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
